--- a/src/App.css
+++ b/src/App.css
@@ -47,24 +47,22 @@ body {
 .mx-1 { margin-left: var(--spacing-unit); margin-right: var(--spacing-unit); }
 .px-1 { padding-left: var(--spacing-unit); padding-right: var(--spacing-unit); }
 
-
 /* Light Mode (Default) */
-body {
+body.light-mode {
   background-color: #fff;
   color: #000;
-  width: 100%;
 }
 
 /* Dark Mode */
 .dark-mode {
   background-color: #121212;
-  color: #fff;
+  color: #e0e0e0;
 }
 
 .dark-mode .hero-section,
 .dark-mode .section_contact {
   background-color: #222;
-  color: #fff;
+  color: #e0e0e0;
 }
 
 /* Navbar */
