--- a/src/components/styles/protocol.css
+++ b/src/components/styles/protocol.css
@@ -1,3 +1,5 @@
+/* Protocol Section */
+
 .section_protocol {
     background: linear-gradient(90deg, rgb(175, 242, 252), #ffffff);
     scroll-margin-top: 50px;
@@ -190,7 +192,7 @@
     z-index: 1050;
     border: none;
     background: transparent;
-    font-size: 1.5rem;
+    font-size: 2rem;
     color: #000;
     cursor: pointer;
 }
