--- a/src/components/styles/hero.css
+++ b/src/components/styles/hero.css
@@ -109,7 +109,7 @@
 
  @media (min-width: 1280px) {
 .hero-section {
-padding-top: 150px;
+padding-top: 100px;
 padding-bottom: 100px;
 }
 
@@ -122,7 +122,7 @@ font-size: 1.5rem;
 }
 
 .hero-image img {
-max-width: 600px; /* Adjust for larger screens */
+max-width: 400px; /* Adjust for larger screens */
 }
 
 .image-caption {
@@ -133,6 +133,7 @@ font-size: 2rem;
 max-width: 1400px;
 flex-direction: row;
 text-align: left;
+padding-left: 50px;
 }
 }
 
